--- a/ui/node.html
+++ b/ui/node.html
@@ -191,6 +191,13 @@
             >
               Mine Coins
             </button>
+            <button
+              v-if="view === 'chain' && wallet"
+              class="btn btn-warning"
+              @click="onResolve"
+            >
+              Resolve Conflicts
+            </button>
           </div>
         </div>
         <div class="row">
@@ -418,6 +425,19 @@
                   vm.error = "Something went wrong.";
                 });
             }
+          },
+          onResolve: function() {
+            var vm = this;
+            axios
+              .post("/resolve-conflicts")
+              .then(response => {
+                vm.error = null;
+                vm.success = response.data.message;
+              })
+              .catch(error => {
+                vm.success = null;
+                vm.error = error.response.data.message;
+              });
           }
         }
       });
